--- a/style.css
+++ b/style.css
@@ -28,9 +28,6 @@ body {
 	margin: 0 0.5rem;
 }
 .company-logo {
-	width: 19.8rem;
-	height: 3rem;
-
 	font-family: 'Satisfy';
 	font-style: normal;
 	font-weight: 400;
@@ -50,7 +47,7 @@ body {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	height: 110vh;
+	min-height: 110vh;
 }
 .sec-heading {
 	font-family: 'Poppins';
@@ -70,7 +67,7 @@ body {
 
 .varietie-box {
 	width: 90%;
-	height: 100%;
+	min-height: 100%;
 	gap: 2rem;
 	margin: 2rem 0;
 	display: grid;
@@ -413,4 +410,77 @@ footer {
 }
 .s-box i {
 	font-size: 2rem;
+}
+
+/* Responsie */
+
+@media (max-width: 768px) {
+	#varieties {
+		height: 220vh;
+	}
+	.varietie-box {
+		grid-template-columns: 1fr;
+		grid-template-rows: 4fr 4fr 1fr;
+	}
+	.varietie-box-left {
+		grid-column: 1 / 3;
+	}
+	.box-down {
+		grid-column: 1 / 3;
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		font-size: 2rem;
+		width: 100%;
+	}
+}
+@media (max-width: 375px) {
+	.varietie-box {
+		grid-template-columns: 1fr;
+		grid-template-rows: 4fr 4fr 4fr;
+	}
+	.varietie-box-right {
+		grid-template-columns: 1fr;
+		grid-template-rows: repeat(4, 1fr);
+	}
+	.box-down {
+		height: 100%;
+		grid-template-columns: 1fr;
+		grid-template-rows: repeat(3, 1fr);
+	}
+	.box-down-1 {
+		margin: 0.5rem 1rem;
+	}
+	#top-chefs {
+		height: 100vh;
+	}
+
+	.chefs-content {
+		margin-top: 1rem;
+		height: fit-content;
+		background: url(./img/bgImg.png) repeat-y;
+		flex-direction: column;
+	}
+	.chef {
+		height: 15rem;
+		width: 20rem;
+		margin: 1rem 0;
+	}
+	#food-guide {
+		top: -10rem;
+		height: 200vh;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.food-bg {
+		background: url(./img/bgImg2.png) repeat-y;
+	}
+	.food-item-box {
+		width: 90%;
+		height: 80%;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+	}
 }
