--- a/style.css
+++ b/style.css
@@ -127,14 +127,16 @@ body {
 	color: #ffffff;
 	font-family: 'Poppins';
 	font-weight: 700;
-	margin: 2rem 5rem;
+	width: 90%;
+	margin: 2rem auto;
 }
 .p-1 {
 	font-size: 1.3rem;
 	color: #ffffff;
 	font-family: 'Poppins';
 	font-weight: 500;
-	margin: 2rem 5rem;
+	width: 90%;
+	margin: 2rem auto;
 }
 .l-1 {
 	box-sizing: border-box;
@@ -142,12 +144,15 @@ body {
 	height: 3px;
 	background: #fff;
 	border: 1px solid #fff;
-	margin: 2rem 5rem;
+	width: 90%;
+	margin: 2rem auto;
 }
 .ex-star-block {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	width: 90%;
+	margin: 0 auto;
 }
 .explore {
 	display: inline-block;
@@ -155,7 +160,7 @@ body {
 	color: #ffffff;
 	font-family: 'Poppins';
 	font-weight: 500;
-	margin: 0 5rem;
+	/* margin: 0 5rem; */
 	border: 1px solid #fff;
 	border-radius: 1.5rem;
 	padding: 1rem 2rem;
@@ -170,7 +175,7 @@ body {
 	color: #ffffff;
 	font-family: 'Poppins';
 	font-weight: 500;
-	margin: 0 5rem;
+	/* margin: 0 5rem; */
 	padding: 1rem 2rem;
 }
 .star i {
@@ -181,20 +186,23 @@ body {
 	box-sizing: border-box;
 	width: calc(100% - 6rem);
 	height: 0.5px;
-	margin: 1rem 3rem;
+	width: 90%;
+	margin: 1rem auto;
 	background: rgb(149, 149, 149);
 }
 .h-2 {
 	font-size: 1.5rem;
 	font-family: 'Poppins';
 	font-weight: 700;
-	margin: 1rem 3rem;
+	width: 90%;
+	margin: 1rem auto;
 }
 .p-2 {
 	font-size: 1rem;
 	font-family: 'Poppins';
 	font-weight: 500;
-	margin: 1rem 3rem;
+	width: 90%;
+	margin: 1rem auto;
 }
 .ex-star-block-2 {
 	display: flex;
@@ -417,7 +425,7 @@ footer {
 
 @media (max-width: 1200px) {
 	#varieties {
-		height: 220vh;
+		height: 270vh;
 	}
 	.varietie-box {
 		grid-template-columns: 1fr;
@@ -434,6 +442,9 @@ footer {
 		font-size: 2rem;
 		width: 100%;
 	}
+	#food-guide {
+		height: 150vh;
+	}
 }
 
 @media (max-width: 992px) {
@@ -442,7 +453,7 @@ footer {
 		height: 60%;
 	}
 	#top-chefs {
-		height: 120vh;
+		height: 144vh;
 	}
 	.chefs-content {
 		flex-direction: column;
@@ -455,7 +466,7 @@ footer {
 	}
 	#food-guide {
 		top: -18rem;
-		height: 130vh;
+		height: 150vh;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -498,7 +509,7 @@ footer {
 		margin: 0.5rem 1rem;
 	}
 	#top-chefs {
-		height: 100vh;
+		height: 111vh;
 	}
 
 	.chefs-content {
